fix cors in task and routine and added other services for user and storage
